Добавил файлы .pyc в игнор

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ DBClient/.idea/inspectionProfiles/Project_Default.xml
 DBClient/.idea/misc.xml
 DBClient/.idea/modules.xml
 DBClient/.idea/vcs.xml
+*.pyc
